the very latest

--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,14 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html>
-  <head>
-  	<title>
-  		NET FLUX
-  	</title>
-    <link rel="stylesheet" href="/style.css"/>
-  </head>
-  <body>
-	<div class="header">
-      <div class="m10"></div>
-	  <div class="m20"></div>
-	  <div class="m30"></div>
-	  <h1 class="netmorphic">NET MORPHIC</h1>
-    </div>
-  	<div id="json"></div>
-	<div id="hoverbot"></div>
-	<div class="container" id="container">
-  	  <div id="tenants"></div>
-	</div>
-  </body>
-  <script type="text/javascript" src="/bundle.js"></script>
+<head>
+  <link rel="stylesheet" type="text/css" href="/config/jsoneditor.css">
+  <script type="text/javascript" src="/config/jsoneditor.js"></script>
+  <script type="text/javascript" src="/config/bundle.js"></script>
+</head>
+<body>
+  <p>
+    <button id="save">SAVE</button>
+  </p>
+  <div id="jsoneditor" style="width: 400px; height: 400px;"></div>
+</body>
 </html>
