--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
   <p>
     <button id="save">SAVE</button>
   </p>
-  <div id="jsoneditor" style="width: 400px; height: 400px;"></div>
+  <div id="jsoneditor" style="width: 100%; height: 100%;"></div>
 </body>
 </html>
